fix: add button spacing

--- a/style.css
+++ b/style.css
@@ -32,3 +32,7 @@ audio {
     font-family: Arial, Helvetica, sans-serif;
     padding: 1vh;
 }
+
+.audio-button+.audio-button {
+    margin-left: 1vw;
+}
